@@ -384,6 +384,8 @@ class PropertyLoader(StrategizedProperty):
             # load "polymorphic" versions of the columns present in "remote_side" - this is
             # important for lazy-clause generation which goes off the polymorphic target selectable
             for c in list(self.remote_side):
+                if self.secondary and c in self.secondary.columns:
+                    continue
                 for equiv in [c] + (c in target_equivalents and target_equivalents[c] or []): 
                     corr = self.mapper.select_table.corresponding_column(equiv, raiseerr=False)
                     if corr:
